Finally fix overflow issue

--- a/src/main.scss
+++ b/src/main.scss
@@ -12,7 +12,7 @@ body {
   scroll-behavior: smooth;
   font-style: normal;
   // overflow-x: hidden;
-  width: 100vw;
+  max-width: 100vw;
   text-align: center;
   background: black url(./images/bg/stage.jpg) no-repeat fixed;
   background-size: auto 100%;
@@ -34,21 +34,19 @@ body {
 
 section {
   position: relative;
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 }
 
 .splash-page {
   z-index: 100;
   height: 100vh;
-  width: 100vw;
+  // width: 100vw;
   margin-bottom: 100vh;
 
   .splash-space {
     margin: 0;
     height: 90vh;
-    width: 100vw;
-    // background-color: black;
   }
 
   .bg-dark {
